--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "framer-motion": "^6.4.3",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
+    "qr-code-styling": "^1.9.2",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-countup": "^6.3.2",
     "react-dom": "^18.2.0",
